@@ -1,3 +1,6 @@
+2016-09-14  Kirit Saelensminde  <kirit@felspar.com>
+ Set source address on the network connection when possible.
+
 2016-09-11  Kirit Saelensminde  <kirit@felspar.com>
  The test script can now check CSJ results are what is expected.
 
